--- a/CSS.css
+++ b/CSS.css
@@ -196,6 +196,10 @@ body{
     border-radius: 5px;
     cursor: pointer;
 }
+h1{
+    cursor: pointer;
+}
+
 /* ********** */
 /* SERVICIOS */
 /* ********** */
